# LEAP_Hand_Sim

./: .gitignore  pyproject.toml
leapsim/: train.py
leapsim/cfg/: config.yaml
leapsim/cfg/task/: LeapHandRot.yaml
leapsim/cfg/train/: LeapHandRotPPO.yaml
leapsim/learning/: common_agent.py
leapsim/tasks/: leap_hand_rot.py
leapsim/utils/: env_setup.py  rerun_vis.py  rlgames_utils.py
